--- a/src/components/pages.css
+++ b/src/components/pages.css
@@ -49,6 +49,7 @@
 
 .slogan {
     background-color: rgba(1,1,1,0.3);
+    background-attachment: fixed;
     position: absolute;
     top: 0;
     left: 0;
