--- a/src/components/pages.css
+++ b/src/components/pages.css
@@ -10,9 +10,15 @@
 .nav_bar{
     background-color: rgba(1,1,1,0);
 }
+.nav-color{
+    background-color: black !important;
+}
 
 .nav_items{
     margin-left: 250px;
+}
+.nav-link:hover{
+    border-bottom: 1px solid white;
 }
 
 #header {
