--- a/src/components/pt.css
+++ b/src/components/pt.css
@@ -4,17 +4,21 @@
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center;
+    position: relative;
     background-size: cover;
     height: 100vh;
+    width: 100%;
+    
 }
 
 .pt-slogan{
     padding-top: 50vh;
+    width: 100%;
     background: linear-gradient(to right, rgba(0, 0, 0, 0.8), transparent);
-    /* position: absolute; */
+    position: absolute;
     color: #f5f5f5; 
     font-weight: bold;
-    z-index: 1;
+    z-index: 999;
     height:100vh;
 }
 
@@ -29,3 +33,6 @@
     justify-content: space-around;
 }
 
+.subscription{
+    margin-bottom: 30px;
+}
