--- a/src/components/pages.css
+++ b/src/components/pages.css
@@ -2,6 +2,11 @@
     margin:0;
     padding:0;
 }
+
+.bg-color{
+    background-color: black !important;
+}
+ 
 .logo{
     height:80px;
     border-radius: 2px;
@@ -13,6 +18,10 @@
 
 .nav_items{
     margin-left: 250px;
+}
+
+.nav-link:hover{
+    border-bottom: 1px solid white;
 }
 
 #header {
@@ -60,6 +69,21 @@
     color: white;
 
 }
+
+.slog_head{
+    padding-top:40vh;
+    color:rgb(177, 187, 197);
+    padding-left:9%;
+    text-align: left;
+    font-size: 10vh;
+}
+.slog_txt{
+    text-align: left;
+    padding-left:9%;
+    font-size: 7vh;
+}
+
+
 
 .slog_head{
     padding-top:40vh;
